force-app/main/default/objects/Outreach_Event__c/Outreach_Event__c.object-meta.xml
<CustomObject>
    <description>DEV-4536: Append-oriented outreach event log (attempts, outcomes, channels).</description>
    <label>Outreach Event</label>
    <nameField>
        <label>Event Number</label>
        <type>AutoNumber</type>
        <displayFormat>OEV-{00000}</displayFormat>
    </nameField>
    <pluralLabel>Outreach Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>