force-app/main/default/objects/Outreach_Event__c/fields/Actor__c.field-meta.xml
<CustomField>
    <fullName>Actor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who performed or logged the outreach event.</description>
    <label>Actor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Outreach_Events_Actor</relationshipName>
    <type>Lookup</type>
</CustomField>