force-app/main/default/objects/Outreach_Event__c/fields/Episode__c.field-meta.xml
<CustomField>
    <fullName>Episode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Episode</label>
    <referenceTo>Outreach_Episode__c</referenceTo>
    <relationshipLabel>Outreach Events</relationshipLabel>
    <relationshipName>Outreach_Events</relationshipName>
    <type>Lookup</type>
</CustomField>