force-app/main/default/objects/Outreach_Event__c/fields/Idempotency_Key__c.field-meta.xml
<CustomField>
    <fullName>Idempotency_Key__c</fullName>
    <description>Unique external ID preventing duplicate event inserts.</description>
    <externalId>true</externalId>
    <label>Idempotency Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>