force-app/main/default/objects/Outreach_Event__c/fields/Legacy_Case__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legacy Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Outreach Events (Legacy)</relationshipLabel>
    <relationshipName>Outreach_Events_Legacy</relationshipName>
    <type>Lookup</type>
</CustomField>