force-app/main/default/objects/Outreach_Event__c/fields/Need__c.field-meta.xml
<CustomField>
    <fullName>Need__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Need</label>
    <referenceTo>Patient_Need__c</referenceTo>
    <relationshipLabel>Outreach Events</relationshipLabel>
    <relationshipName>Outreach_Events</relationshipName>
    <type>Lookup</type>
</CustomField>