force-app/main/default/objects/Outreach_Event__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Outreach Events</relationshipLabel>
    <relationshipName>Outreach_Events</relationshipName>
    <type>Lookup</type>
</CustomField>