force-app/main/default/objects/Outreach_Event__c/fields/Rule_Id__c.field-meta.xml
<CustomField>
    <fullName>Rule_Id__c</fullName>
    <label>Rule Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>