force-app/main/default/objects/Outreach_Event__c/fields/Shadow__c.field-meta.xml
<CustomField>
    <fullName>Shadow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shadow</label>
    <type>Checkbox</type>
</CustomField>